branches/1.0.3/objects/WikiRecentlyViewed__c.object
<CustomObject>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N30000002lOAXEA2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WikiPage__c</fullName>
        <label>Wiki Page</label>
        <referenceTo>WikiPage__c</referenceTo>
        <relationshipLabel>Wikis Recently Viewed</relationshipLabel>
        <relationshipName>RecentlyViewed</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Wiki__c</fullName>
        <label>Wiki</label>
        <referenceTo>Wiki__c</referenceTo>
        <relationshipLabel>Wikis Recently Viewed</relationshipLabel>
        <relationshipName>R00N30000002lO9xEAE</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Wiki Recently Viewed</label>
    <nameField>
        <label>Wiki Recently Vewied Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wikis Recently Viewed</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>